--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,6 +9,7 @@
     tools:context=".LoginActivity">
 
     <ImageView
+        android:id="@+id/test"
         android:layout_marginTop="20dp"
         android:layout_width="match_parent"
         android:layout_height="200dp"
