--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,5 +16,6 @@
     <color name="color2">#535353</color>
     <color name="color3">#16456F</color>
     <color name="color4">#174670</color>
+    <color name="color5">#7587AA</color>
 
 </resources>
