--- a/app/src/main/res/layout/activity_magazine_first_page.xml
+++ b/app/src/main/res/layout/activity_magazine_first_page.xml
@@ -34,7 +34,7 @@
             android:layout_weight="1"
             android:textSize="20sp"
             android:textColor="#4E4B66"
-            android:text="Gazeteler"/>
+            android:text="Dergiler"/>
 
         <androidx.cardview.widget.CardView
             android:visibility="visible"
