--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,5 +17,6 @@
     <color name="color3">#16456F</color>
     <color name="color4">#174670</color>
     <color name="color5">#7587AA</color>
+    <color name="color6">#D88030</color>
 
 </resources>
