--- a/app/src/main/res/layout/grid_view_item5.xml
+++ b/app/src/main/res/layout/grid_view_item5.xml
@@ -4,12 +4,11 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layoutDirection="ltr"
-    android:layout_marginTop="10dp"
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
         android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginVertical="7dp"
         android:layout_marginBottom="3dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -27,10 +26,10 @@
 
 
             <View
+                android:id="@+id/view"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
-                android:background="@drawable/blue_circule"
-                android:backgroundTint="@color/color6"/>
+                android:background="@drawable/orange_circule"/>
 
             <TextView
                 android:id="@+id/nameTextView"
@@ -61,7 +60,7 @@
                 android:maxLines="3"
                 android:textStyle="bold"
                 android:text="25"
-                android:textColor="@color/black"
+                android:textColor="@color/color3"
                 android:textSize="20sp" />
 
 
@@ -84,9 +83,10 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
+        android:layout_marginBottom="10dp"
         android:visibility="gone"
-        android:layout_marginEnd="0dp"
-        android:layout_marginStart="60dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginStart="0dp"
         app:layout_constraintTop_toBottomOf="@+id/test12"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
