--- a/app/src/main/res/layout/grid_view_item7.xml
+++ b/app/src/main/res/layout/grid_view_item7.xml
@@ -43,13 +43,13 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="horizontal">
 
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_weight="1"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:orientation="vertical">
 
                     <TextView
@@ -66,15 +66,15 @@
                     <TextView
                         android:id="@+id/journalistNameTextView"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:layout_gravity="start"
-                        android:layout_marginTop="8dp"
+                        android:layout_marginTop="5dp"
                         android:ellipsize="end"
                         android:maxLines="3"
                         android:textStyle="bold"
                         android:text="Test"
                         android:textColor="#16456F"
-                        android:textSize="20sp" />
+                        android:textSize="15sp" />
 
                 </LinearLayout>
 
