10 after cleaning and renaming

--- a/app/src/main/res/layout/activity_internet.xml
+++ b/app/src/main/res/layout/activity_internet.xml
@@ -32,7 +32,7 @@
             android:layout_weight="1"
             android:textSize="20sp"
             android:textColor="#4E4B66"
-            android:text="Köşe Yazarları"/>
+            android:text="İnternet"/>
 
         <androidx.cardview.widget.CardView
             android:visibility="visible"
