--- a/app/src/main/res/layout/activity_magazine.xml
+++ b/app/src/main/res/layout/activity_magazine.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".activity.VisualMediaActivity">
+    tools:context=".activity.MagazineActivity">
+
+
 
     <LinearLayout
         android:id="@+id/test12"
@@ -32,7 +34,7 @@
             android:layout_weight="1"
             android:textSize="20sp"
             android:textColor="#4E4B66"
-            android:text="@string/visual_media"/>
+            android:text="Dergiler"/>
 
         <androidx.cardview.widget.CardView
             android:visibility="visible"
@@ -52,6 +54,20 @@
 
     </LinearLayout>
 
+    <GridView
+        android:visibility="gone"
+        android:gravity="center_horizontal"
+        android:id="@+id/gridView"
+        android:layout_gravity="center_horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:numColumns="2"
+        android:verticalSpacing="0dp"
+        android:horizontalSpacing="10dp"
+        android:padding="8dp"/>
+
+
+
     <androidx.recyclerview.widget.RecyclerView
         app:layout_constraintTop_toBottomOf="@+id/test12"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -61,6 +77,6 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        app:spanCount="1" />
+        app:spanCount="2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
