--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -7,14 +7,27 @@
     android:background="@color/white"
     tools:context=".activity.ProfileActivity">
 
+
+    <com.example.mtm.util.ZoomClass
+        android:layout_marginTop="30dp"
+        android:id="@+id/zoomImageView"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:scaleType="matrix"
+        android:src="@drawable/test6"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/zoomImageView">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -81,6 +94,9 @@
 
             </FrameLayout>
 
+
+
+
             <TextView
                 android:layout_marginEnd="20dp"
                 android:visibility="invisible"
@@ -96,7 +112,6 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_marginHorizontal="20dp"
-                android:id="@+id/userNameTextInputLayout"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
