--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -9,6 +9,7 @@
 
 
     <com.example.mtm.util.ZoomClass
+        android:visibility="gone"
         android:layout_marginTop="30dp"
         android:id="@+id/zoomImageView"
         android:layout_width="300dp"
@@ -179,7 +180,7 @@
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginTop="20dp"
                 android:paddingVertical="10dp"
-                android:id="@+id/loginMaterialButton"
+                android:id="@+id/logoutMaterialButton"
                 android:layout_gravity="center"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
