--- a/app/src/main/res/layout/item_slide.xml
+++ b/app/src/main/res/layout/item_slide.xml
@@ -2,27 +2,29 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layoutDirection="ltr"
-    android:orientation="vertical"
-    android:gravity="bottom">
+    android:orientation="vertical">
 
     <!-- image viwer to view the images -->
 
-    <ImageView
-
-        android:visibility="gone"
-        android:id="@+id/imageViewMain2"
-        android:layout_width="wrap_content"
-        android:layout_height="70dp"
-        android:layout_gravity="center"
-        />
-<!--    android:background="@drawable/yaser_unicorn_ic_group_170"-->
-    <ImageView
-        android:layout_marginHorizontal="5dp"
-        android:id="@+id/imageViewMain"
+    <androidx.cardview.widget.CardView
+        android:layout_marginHorizontal="10dp"
+        android:id="@+id/shareCardView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-      />
+        app:cardCornerRadius="15dp"
+        app:cardElevation="2dp">
+
+        <ImageView
+            android:scaleType="centerCrop"
+            android:id="@+id/imageViewMain"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </androidx.cardview.widget.CardView>
+
+
 
 <!--    <TextView-->
 <!--        android:id="@+id/textView25"-->
