--- a/app/src/main/res/layout/activity_internet.xml
+++ b/app/src/main/res/layout/activity_internet.xml
@@ -43,10 +43,11 @@
             app:cardElevation="8dp">
 
             <ImageView
-                android:id="@+id/notificationImageView"
+                android:id="@+id/filterImageView"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:src="@drawable/notification_icon" />
+                android:padding="4dp"
+                android:src="@drawable/baseline_filter_alt_24" />
 
         </androidx.cardview.widget.CardView>
 
@@ -62,5 +63,16 @@
         android:layout_height="0dp"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:spanCount="1" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:visibility="gone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/test12"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
