--- a/app/src/main/res/layout/grid_view_internet_sub_list.xml
+++ b/app/src/main/res/layout/grid_view_internet_sub_list.xml
@@ -42,6 +42,14 @@
                 android:textColor="@color/black"
                 android:textSize="15sp" />
 
+            <ProgressBar
+                android:id="@+id/progressBar"
+                android:visibility="gone"
+                android:layout_marginStart="7dp"
+                android:layout_gravity="center_vertical"
+                android:layout_width="20dp"
+                android:layout_height="20dp"/>
+
             <View
                 android:layout_width="0dp"
                 android:layout_height="0dp"
