--- a/app/src/main/res/layout/grid_view_sub_internet_activity.xml
+++ b/app/src/main/res/layout/grid_view_sub_internet_activity.xml
@@ -1,107 +1,136 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layoutDirection="ltr"
-    android:orientation="horizontal"
-    app:cardCornerRadius="8dp"
-    app:cardElevation="2dp"
-   android:layout_margin="4dp">
+    android:orientation="vertical">
 
 
-    <LinearLayout
-        android:background="#F2F3F4"
-        android:padding="10dp"
-        android:orientation="horizontal"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="2dp"
+        android:layout_margin="4dp">
 
-        <com.google.android.material.imageview.ShapeableImageView
-            android:layout_width="110dp"
-            android:layout_height="110dp"
-            android:scaleType="centerCrop"
-            android:id="@+id/journalistImageView"
-            app:shapeAppearanceOverlay="@style/roundedImageViewRounded2"/>
 
         <LinearLayout
-            android:layout_marginStart="10dp"
-            android:layout_marginVertical="5dp"
+            android:background="#F2F3F4"
+            android:padding="10dp"
+            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/dateTextView"
-                android:textSize="8sp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="12.01.2024"
-                android:textColor="@color/black"
-                android:maxLines="1"
-                android:ellipsize="end" />
+            <com.google.android.material.imageview.ShapeableImageView
+                android:layout_width="110dp"
+                android:layout_height="110dp"
+                android:scaleType="centerCrop"
+                android:id="@+id/journalistImageView"
+                app:shapeAppearanceOverlay="@style/roundedImageViewRounded2"/>
 
             <LinearLayout
+                android:layout_marginStart="10dp"
+                android:layout_marginVertical="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal">
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/dateTextView"
+                    android:textSize="8sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="12.01.2024"
+                    android:textColor="@color/black"
+                    android:maxLines="1"
+                    android:ellipsize="end" />
 
                 <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical">
+                    android:orientation="horizontal">
 
-                    <TextView
-                        android:textSize="15sp"
-                        android:id="@+id/mediaNameTextView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Test"
-                        android:layout_gravity="start"
-                        android:textColor="#D88030"
-                        android:maxLines="1"
-                        android:ellipsize="end" />
-
-                    <TextView
-                        android:id="@+id/journalistNameTextView"
-                        android:layout_width="match_parent"
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
                         android:layout_height="match_parent"
-                        android:layout_gravity="start"
-                        android:layout_marginTop="5dp"
-                        android:ellipsize="end"
-                        android:maxLines="3"
-                        android:textStyle="bold"
-                        android:text="Test"
-                        android:textColor="#16456F"
-                        android:textSize="15sp" />
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:textSize="15sp"
+                            android:id="@+id/mediaNameTextView"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Test"
+                            android:layout_gravity="start"
+                            android:textColor="#D88030"
+                            android:maxLines="1"
+                            android:ellipsize="end" />
+
+                        <TextView
+                            android:id="@+id/journalistNameTextView"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_gravity="start"
+                            android:layout_marginTop="5dp"
+                            android:ellipsize="end"
+                            android:maxLines="3"
+                            android:textStyle="bold"
+                            android:text="Test"
+                            android:textColor="#16456F"
+                            android:textSize="15sp" />
+
+                    </LinearLayout>
+
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/shareCardView"
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
+                        android:layout_marginTop="15dp"
+                        android:layout_marginBottom="15dp"
+                        app:cardCornerRadius="45dp"
+                        android:layout_marginHorizontal="5dp"
+                        app:cardElevation="2dp">
+
+                        <ImageView
+                            android:id="@+id/notificationImageView"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_margin="7dp"
+                            android:src="@drawable/share_icon"
+                            app:tint="#16456F" />
+
+                    </androidx.cardview.widget.CardView>
 
                 </LinearLayout>
-
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/shareCardView"
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
-                    android:layout_marginTop="15dp"
-                    android:layout_marginBottom="15dp"
-                    app:cardCornerRadius="45dp"
-                    android:layout_marginHorizontal="5dp"
-                    app:cardElevation="2dp">
-
-                    <ImageView
-                        android:id="@+id/notificationImageView"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_margin="7dp"
-                        android:src="@drawable/share_icon"
-                        app:tint="#16456F" />
-
-                </androidx.cardview.widget.CardView>
 
             </LinearLayout>
 
         </LinearLayout>
 
-    </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
-</androidx.cardview.widget.CardView>
+    <FrameLayout
+        android:visibility="gone"
+        android:id="@+id/frameLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    <Button
+        android:layout_gravity="center"
+        android:id="@+id/button"
+        android:text="Daha fazla yükle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <ProgressBar
+        android:visibility="gone"
+        android:id="@+id/progressBar"
+        android:layout_gravity="center"
+        android:layout_width="30dp"
+        android:layout_height="30dp"/>
+</FrameLayout>
+
+</LinearLayout>
