--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -197,6 +197,188 @@
                 android:textStyle="bold"
                 android:text="Paylaş"/>
 
+
+
+            <HorizontalScrollView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginHorizontal="20dp">
+
+                <LinearLayout
+                    android:gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <FrameLayout
+                            android:id="@+id/facebookFrameLayout"
+                            android:layout_marginHorizontal="6dp"
+                            android:layout_gravity="center_horizontal"
+                            android:layout_width="60dp"
+                            android:layout_height="60dp"
+                            android:animateLayoutChanges="true"
+                            android:background="@drawable/test16"
+                            android:backgroundTint="@color/color5"
+                            app:layout_constraintEnd_toEndOf="parent">
+                            <ImageView
+                                android:layout_gravity="center"
+                                android:layout_width="30dp"
+                                android:layout_height="30dp"
+                                android:src="@drawable/facebook_icon"/>
+                        </FrameLayout>
+
+                        <TextView
+                            android:layout_marginTop="2dp"
+                            android:textSize="12sp"
+                            android:layout_gravity="center"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/color3"
+                            android:text="Facebook"/>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <FrameLayout
+                            android:id="@+id/twitterFrameLayout"
+                            android:layout_marginHorizontal="6dp"
+                            android:layout_gravity="center_horizontal"
+                            android:layout_width="60dp"
+                            android:layout_height="60dp"
+                            android:animateLayoutChanges="true"
+                            android:background="@drawable/test16"
+                            android:backgroundTint="@color/color5"
+                            app:layout_constraintEnd_toEndOf="parent">
+                            <ImageView
+                                android:layout_gravity="center"
+                                android:layout_width="30dp"
+                                android:layout_height="30dp"
+                                android:src="@drawable/twitter_icon"/>
+                        </FrameLayout>
+
+                        <TextView
+                            android:layout_marginTop="2dp"
+                            android:textSize="12sp"
+                            android:layout_gravity="center"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/color3"
+                            android:text="Twitter"/>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <FrameLayout
+                            android:id="@+id/instagramFrameLayout"
+                            android:layout_marginHorizontal="6dp"
+                            android:layout_gravity="center_horizontal"
+                            android:layout_width="60dp"
+                            android:layout_height="60dp"
+                            android:animateLayoutChanges="true"
+                            android:background="@drawable/test16"
+                            android:backgroundTint="@color/color5"
+                            app:layout_constraintEnd_toEndOf="parent">
+                            <ImageView
+                                android:layout_gravity="center"
+                                android:layout_width="30dp"
+                                android:layout_height="30dp"
+                                android:src="@drawable/insta_icon"/>
+                        </FrameLayout>
+
+                        <TextView
+                            android:layout_marginTop="2dp"
+                            android:textSize="12sp"
+                            android:layout_gravity="center"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/color3"
+                            android:text="Instagram"/>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <FrameLayout
+                            android:id="@+id/youtubeFrameLayout"
+                            android:layout_marginHorizontal="6dp"
+                            android:layout_gravity="center_horizontal"
+                            android:layout_width="60dp"
+                            android:layout_height="60dp"
+                            android:animateLayoutChanges="true"
+                            android:background="@drawable/test16"
+                            android:backgroundTint="@color/color5"
+                            app:layout_constraintEnd_toEndOf="parent">
+                            <ImageView
+                                android:layout_gravity="center"
+                                android:layout_width="30dp"
+                                android:layout_height="30dp"
+                                android:src="@drawable/youtube_icon"/>
+                        </FrameLayout>
+
+                        <TextView
+                            android:layout_marginTop="2dp"
+                            android:textSize="12sp"
+                            android:layout_gravity="center"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/color3"
+                            android:text="Youtube"/>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <FrameLayout
+                            android:id="@+id/linkedInFrameLayout"
+                            android:layout_marginHorizontal="6dp"
+                            android:layout_gravity="center_horizontal"
+                            android:layout_width="60dp"
+                            android:layout_height="60dp"
+                            android:animateLayoutChanges="true"
+                            android:background="@drawable/test16"
+                            android:backgroundTint="@color/color5"
+                            app:layout_constraintEnd_toEndOf="parent">
+                            <ImageView
+                                android:layout_gravity="center"
+                                android:layout_width="30dp"
+                                android:layout_height="30dp"
+                                android:src="@drawable/linked_in_icon"/>
+                        </FrameLayout>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginTop="2dp"
+                            android:text="Linkedin"
+                            android:textColor="@color/color3"
+                            android:textSize="12sp" />
+
+                    </LinearLayout>
+                </LinearLayout>
+
+            </HorizontalScrollView>
+
             <LinearLayout
                 android:gravity="center"
                 android:layout_marginTop="10dp"
@@ -204,165 +386,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
 
-                    <FrameLayout
-                        android:layout_marginHorizontal="6dp"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
-                        android:animateLayoutChanges="true"
-                        android:background="@drawable/test16"
-                        android:backgroundTint="@color/color5"
-                        app:layout_constraintEnd_toEndOf="parent">
-                        <ImageView
-                            android:layout_gravity="center"
-                            android:layout_width="30dp"
-                            android:layout_height="30dp"
-                            android:src="@drawable/telegram_icon"/>
-                    </FrameLayout>
-
-                    <TextView
-                        android:layout_marginTop="2dp"
-                        android:textSize="12sp"
-                        android:layout_gravity="center"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/color3"
-                        android:text="Telegram"/>
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <FrameLayout
-                        android:layout_marginHorizontal="6dp"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
-                        android:animateLayoutChanges="true"
-                        android:background="@drawable/test16"
-                        android:backgroundTint="@color/color5"
-                        app:layout_constraintEnd_toEndOf="parent">
-                        <ImageView
-                            android:layout_gravity="center"
-                            android:layout_width="30dp"
-                            android:layout_height="30dp"
-                            android:src="@drawable/twitter_icon"/>
-                    </FrameLayout>
-
-                    <TextView
-                        android:layout_marginTop="2dp"
-                        android:textSize="12sp"
-                        android:layout_gravity="center"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/color3"
-                        android:text="Twitter"/>
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <FrameLayout
-                        android:layout_marginHorizontal="6dp"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
-                        android:animateLayoutChanges="true"
-                        android:background="@drawable/test16"
-                        android:backgroundTint="@color/color5"
-                        app:layout_constraintEnd_toEndOf="parent">
-                        <ImageView
-                            android:layout_gravity="center"
-                            android:layout_width="30dp"
-                            android:layout_height="30dp"
-                            android:src="@drawable/whatsapp_icon"/>
-                    </FrameLayout>
-
-                    <TextView
-                        android:layout_marginTop="2dp"
-                        android:textSize="12sp"
-                        android:layout_gravity="center"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/color3"
-                        android:text="Whatsapp"/>
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <FrameLayout
-                        android:layout_marginHorizontal="6dp"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
-                        android:animateLayoutChanges="true"
-                        android:background="@drawable/test16"
-                        android:backgroundTint="@color/color5"
-                        app:layout_constraintEnd_toEndOf="parent">
-                        <ImageView
-                            android:layout_gravity="center"
-                            android:layout_width="30dp"
-                            android:layout_height="30dp"
-                            android:src="@drawable/email_icon"/>
-                    </FrameLayout>
-
-                    <TextView
-                        android:layout_marginTop="2dp"
-                        android:textSize="12sp"
-                        android:layout_gravity="center"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/color3"
-                        android:text="E-mail"/>
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <FrameLayout
-                        android:layout_marginHorizontal="6dp"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
-                        android:animateLayoutChanges="true"
-                        android:background="@drawable/test16"
-                        android:backgroundTint="@color/color5"
-                        app:layout_constraintEnd_toEndOf="parent">
-                        <ImageView
-                            android:layout_gravity="center"
-                            android:layout_width="30dp"
-                            android:layout_height="30dp"
-                            android:src="@drawable/share_icon"/>
-                    </FrameLayout>
-
-                    <TextView
-                        android:layout_marginTop="2dp"
-                        android:textSize="12sp"
-                        android:layout_gravity="center"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/color3"
-                        android:text="More"/>
-
-                </LinearLayout>
 
 
 
