--- a/app/src/main/res/layout/activity_sub_internet.xml
+++ b/app/src/main/res/layout/activity_sub_internet.xml
@@ -7,7 +7,6 @@
     android:background="@color/white"
     tools:context=".activity.SubInternetActivity">
 
-
     <LinearLayout
         android:id="@+id/test12"
         android:layout_width="match_parent"
@@ -27,6 +26,7 @@
             android:src="@drawable/left_arrow_blue" />
 
         <TextView
+            android:id="@+id/titleTextView"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -48,11 +48,9 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:src="@drawable/notification_icon" />
-
         </androidx.cardview.widget.CardView>
 
     </LinearLayout>
-
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
@@ -65,44 +63,9 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:spanCount="1" />
 
-    <FrameLayout
+    <include
         android:visibility="gone"
-        android:id="@+id/frameLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
-
-        <Button
-            android:layout_gravity="center"
-            android:id="@+id/button"
-            android:text="Daha fazla yükle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-        <ProgressBar
-            android:visibility="gone"
-            android:id="@+id/progressBar"
-            android:layout_gravity="center"
-            android:layout_width="30dp"
-            android:layout_height="30dp"/>
-
-
-    </FrameLayout>
-
-
-
-
-    <WebView
-        android:id="@+id/webView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:id="@+id/web_view_layout"
+        layout="@layout/web_view_layout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
